Fix ordered list spacing

--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -36,7 +36,7 @@ body {
   border: solid 3px darkgray;
 }
 
-li > ul {
+li > ul, li > ol {
   margin: 0px;
 }
 
